change: extra logic for us stocks
